package br.unitins.model;

import jakarta.persistence.Entity;

@Entity
public class Premio extends DefaultEntity{
    private String nome;
    private Integer ano;

    public String getNome() {
        return nome;
    }

    public void setNome(String nome) {
        this.nome = nome;
    }

    public Integer getAno() {
        return ano;
    }

    public void setAno(Integer ano) {
        this.ano = ano;
    }

    
}
