@startuml
' Estilo e configurações
skinparam classAttributeIconSize 0
skinparam backgroundColor #FEFEFE
skinparam class {
    BackgroundColor #E1F5FE
    BorderColor #0288D1
    ArrowColor #D32F2F
}

' Pacote/Namespace
package "Modelo de Domínio" {
    
    ' Classe Ator
    class Ator {
        - id: Long
        - nome: String
        - premios: List<Premio>
        --
        + Ator()
        + Ator(nome: String)
        + adicionarPremio(premio: Premio): void
        + removerPremio(premio: Premio): void
        + getPremios(): List<Premio>
        + getNome(): String
        + setNome(nome: String): void
    }
    
    ' Classe Premio
    class Premio {
        - id: Long
        - nome: String
        - ano: Integer
        - ator: Ator
        --
        + Premio()
        + Premio(nome: String, ano: Integer)
        + getAtor(): Ator
        + setAtor(ator: Ator): void
        + getNome(): String
        + getAno(): Integer
    }
    
    ' Relacionamento com multiplicidade
    Ator "1" --> "0..*" Premio : possui
    
    ' Ou para maior clareza, usando anotações:
    ' Ator ||--o{ Premio : possui
    
    ' Anotações JPA (opcional)
    note right of Ator : @Entity\n@OneToMany(mappedBy = "ator")\ncascade = CascadeType.ALL
    note left of Premio : @Entity\n@ManyToOne(optional = false)\n@JoinColumn(name = "ator_id")
}

@enduml